2012-11-01  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/logical/or.h : implementing x | y where x and y are
        Logical sugar expressions
        * include/Rcpp/sugar/logical/and.h : implementing x & y where x and y are
        Logical sugar expressions

2012-10-31  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: add cppFunction for inline-style definitions; 
	change 'local' param to (more clear and explicit) 'envir' param;
	change 'show.output' param to 'showOutput'; add parameter to 
	onBuild hook to indicate if the source was from a 'code' parameter
	* src/Attributes.cpp: factored parser into it's own file
	* src/AttributesParser.h: attributes parser header
	* src/AttributesParser.cpp: attributes parser implementation
	* man/sourceCpp.Rd: documentation updates
	* man/compileAttributes.Rd: documentation updates
	* man/cppFunction.Rd: documentation for cppFunction
	* NAMESPACE: export for cppFunction 

2012-10-31  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/class.h: factored out of Module.h which started to 
        be too big. class_ gains a derives<Parent>( "Parent" ) for so that the 
        class inherits method that were exposed by its parent. 
        * include/Rcpp/Module.h: template class CppInheritedMethod for implementing
        inherited method
        * src/Module.cpp: get_class_pointer implementation
        
2012-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rmath.h: Finalised adding Rmath functions

2012-10-30  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: new functions sourceCpp and compileAttributes that
	use C++11 style attributes (embedded in comments) to perform
	automatic generation of boilerplate marshaling code
	* src/Attributes.cpp: support functions for attribute handling
	* include/Rcpp/exceptions.h: file io exception classes
	* man/sourceCpp.Rd: documentation for sourceCpp
	* man/compileAttributes.Rd: documentation for compileAttributes