@@ -1,3 +1,10 @@
+2012-10-31  JJ Allaire <jj@rstudio.org>
+
+	* R/Attributes.R: change 'envir' param to 'env' for consistency with
+	the interface of loadModule
+	* man/sourceCpp.Rd: documentation updates
+	* man/cppFunction.Rd: documentation updates
+
 2012-11-01  Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/sugar/logical/or.h : implementing x | y where x and y are
